[swig to njk] Replace raw per safe filter at description partial

--- a/views/includes/partials/description.html.njk
+++ b/views/includes/partials/description.html.njk
@@ -1,7 +1,7 @@
 {% if description %}
 <section class="main__section">
   <div class="container">
-    {{ description | raw }}
+    {{ description | safe }}
   </div>
 </section>
 {% endif %}
