Fix invalid condition for displaying alias items in sidebar

--- a/views/includes/partials/sidebar.html.njk
+++ b/views/includes/partials/sidebar.html.njk
@@ -35,7 +35,7 @@
             <li class="sidebar__item  sassdoc__item" data-group="{{ group_name }}" data-name="{{ item.context.name }}" data-type="{{ item.context.type }}">
               <a href="#{{ group_name }}-{{ item.context.type }}-{{ item.context.name }}">{{ item.context.name | unescape }}
               {% if item.access[0] == "private" %}<span class="sidebar__annotation  sidebar__annotation--private">private</span>{% endif %}
-              {% if item.alias != false %}<span class="sidebar__annotation  sidebar__annotation--alias">alias</span>{% endif %}
+              {% if item.alias %}<span class="sidebar__annotation  sidebar__annotation--alias">alias</span>{% endif %}
               </a>
             </li>
             {% if loop.last %}</ul>{% endif %}
