Fix parameter annotations `<code>` escaping to to Nunjucks migration

--- a/views/includes/annotations/parameter.html.njk
+++ b/views/includes/annotations/parameter.html.njk
@@ -21,7 +21,7 @@
               {% if parameter.type == '*' %}
                 Any
               {% else %}
-                {{ parameter.type | display_as_type }}
+                {{ parameter.type | display_as_type | safe }}
               {% endif %}
             </code>
           </td>
