add item.group to the name annotation link

--- a/views/includes/annotations/name.html.njk
+++ b/views/includes/annotations/name.html.njk
@@ -3,20 +3,20 @@
     <span class="item__access">[{{ item.access }}]</span>
   {% endif %}
 
-  <a class="item__name" href="#{{ item.context.type }}-{{ item.context.name }}">
+  <a class="item__name" href="#{{ item.group }}-{{ item.context.type }}-{{ item.context.name }}">
     {{ item.context.name | unescape }}
   </a>
 
   {% if display.alias and item.aliased.length > 0 %}
     <span class="item__aliased">(aliased as
     {% for alias in item.aliased %}
-      <a href="#{{ item.context.type }}-{{ alias }}"><code>{{ alias }}</code></a>
+      <a href="#{{ item.group }}-{{ item.context.type }}-{{ alias }}"><code>{{ alias }}</code></a>
     {% endfor %}
     )</span>
   {% endif %}
 
   {% if item.alias %}
-    <span class="item__alias">(alias for <a href="#{{ item.context.type }}-{{ item.alias }}"><code>{{ item.alias }}</code></a>)</span>
+    <span class="item__alias">(alias for <a href="#{{ item.group }}-{{ item.context.type }}-{{ item.alias }}"><code>{{ item.alias }}</code></a>)</span>
   {% endif %}
 </h3>
 
